# Spotify-Musical-Analysis

./: .buildinfo  .pre-commit-config.yaml  README.md  contributing.html  genindex.html  getting_started.html  index.html  license.html  modules.html  musical_analysis.html  objects.inv  pyproject.toml  search.html  searchindex.js  usage.html
.doctrees/: contributing.doctree  environment.pickle  getting_started.doctree  index.doctree  license.doctree  modules.doctree  musical_analysis.doctree  usage.doctree
.github/workflows/: sphinx_doc.yaml  tests.yaml
_sources/: contributing.rst.txt  getting_started.rst.txt  index.rst.txt
docs/: modules.rst
docs/source/: conf.py  license.rst  modules.rst  musical_analysis.rst  usage.rst
src/: app.py
src/musical_analysis/: claude_llm.py  dashboard.py  data_loading.py  home.py  main.py  plot_utils.py
tests/: test_dashboard.py
