[project]
name = "musical-analysis"
version = "0.1.0"
description = ""
authors = [
    {name = "Mehyar Mlaweh",email = "mehyarmlaweh0@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "pytest (>=8.3.4,<9.0.0)",
    "pytest-cov (>=6.0.0,<7.0.0)",
    "kaleido (==0.1.0)"
]

[tool.poetry]
packages = [{include = "musical_analysis", from = "src"}]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
