[project]
name = "musical-analysis"
version = "0.1.0"
description = ""
authors = [
    {name = "Mehyar Mlaweh",email = "mehyarmlaweh0@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "pytest (>=8.3.4,<9.0.0)",
    "pytest-cov (>=6.0.0,<7.0.0)",
    "kaleido (==0.1.0)",
    "ruff (>=0.9.2,<0.10.0)",
    "pre-commit (>=4.0.1,<5.0.0)",
    "sphinx (>=8.1.3,<9.0.0)",
    "sphinx-rtd-theme (>=3.0.2,<4.0.0)"
]

[tool.poetry]
packages = [{include = "musical_analysis", from = "src"}]


[tool.poetry.group.dev.dependencies]
pytest = "^8.3.4"
furo = "^2024.8.6"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
